objects/Case.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Srilanka</fullName>
                </value>
                <value>
                    <fullName>Odisha</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Bhubaneswar</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Maharastra</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_sample_custom_field__c</fullName>
        <label>Test sample custom field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>